<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2021, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>15</version>
        <relativePath />
    </parent>

    <artifactId>powsybl-entsoe</artifactId>
    <version>2.9.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ENTSO-E</name>
    <description>PowSyBl Entso-e parent project</description>
    <url>http://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-entsoe.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-entsoe.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-entsoe</url>
    </scm>

    <developers>
        <developer>
            <name>Miora RALAMBOTIANA</name>
            <email>miora.ralambotiana@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>

        <developer>
            <name>Sebastien MURGEY</name>
            <email>sebastien.murgey@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>https://www.rte-france.com</organizationUrl>
        </developer>

        <developer>
            <name>Hugo SCHINDLER</name>
            <email>hugo.schindler@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>https://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>17</java.version>
        <powsyblcore.version>6.3.0-SNAPSHOT</powsyblcore.version>
        <powsyblopenloadflow.version>1.8.0-SNAPSHOT</powsyblopenloadflow.version>
        <sonar.coverage.jacoco.xmlReportPaths>
            ../distribution-entsoe/target/site/jacoco-aggregate/jacoco.xml,
            ../../distribution-entsoe/target/site/jacoco-aggregate/jacoco.xml,
            ../../../distribution-entsoe/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <ejml.version>0.41</ejml.version>
        <commonscsv.version>1.9.0</commonscsv.version>
        <maven.jaxb2.version>3.1.0</maven.jaxb2.version>
        <jakarta.xml.bind.version>4.0.1</jakarta.xml.bind.version>
        <jaxb.runtime.version>4.0.3</jaxb.runtime.version>
    </properties>

    <modules>
        <module>balances-adjustment</module>
        <module>cne</module>
        <module>entsoe-cgmes-balances-adjustment</module>
        <module>distribution-entsoe</module>
        <module>flow-decomposition</module>
        <module>glsk</module>
        <module>emf</module>
        <module>commons</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>jaxb2-maven-plugin</artifactId>
                    <version>${maven.jaxb2.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsyblcore.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-open-loadflow</artifactId>
                <version>${powsyblopenloadflow.version}</version>
            </dependency>

            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-balances-adjustment</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-cne-converter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-cne-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-entsoe-cgmes-balances-adjustment</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-entsoe-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-flow-decomposition</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-glsk-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-glsk-document-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-glsk-document-cim</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-glsk-document-cse</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-glsk-document-io-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-glsk-document-ucte</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-glsk-quality-check-ucte</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>${jakarta.xml.bind.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${jaxb.runtime.version}</version>
                <scope>runtime</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
